syntax = "proto3";
package content;
import "content/content.enum.proto";
import "common/common.model.proto";
import "common/common.enum.proto";
import "hopeio/utils/patch/go.proto";
import "hopeio/time/time.proto";
import "hopeio/time/deletedAt/deletedAt.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "user/user.model.proto";

option java_package = "xyz.hoper.protobuf.content";
option java_multiple_files = true;
option go_package = "github.com/liov/hoper/server/go/protobuf/content";



message ContentTag{
  uint64 refId = 6 [(go.field) = {tags:'gorm:"size:20;primaryKey" validate:"required" comment:"相关id"'}];
  uint64 tagId = 3[(go.field) = {tags:'gorm:"size:20;primaryKey" validate:"required" comment:"相关id"'}];
  uint32 relativity = 4[(go.field) = {tags:'gorm:"type:int2;not null;default:0" comment:"相关度"'}];
  time.Time createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  deletedAt.DeletedAt deletedAt = 26 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}

message Category{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" validate:"required,gte=2,lte=10" comment:"名称"'}];
  uint64 pId = 3 [(go.field) = {tags:'gorm:"default:0;index" comment:"直接父分类的ID"'}];
  uint32 sequence = 4 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"同级别的分类可根据sequence的值来排序，置顶"'}];
  uint64 userId = 5 [(go.field) = {tags:'gorm:"size:20" comment:"用户id"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  time.Time createdAt = 16 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  time.Time updatedAt = 27 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 22 [(go.field) = {tags:'gorm:"type:timestamptz(6);index"'}];
}


message AttrGroup{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  string name = 2 [(go.field) = {tags:'gorm:"size:10;not null" validate:"required,gte=2,lte=10" comment:"名称"'}];
  uint64 pId = 3 [(go.field) = {tags:'gorm:"default:0;index" comment:"直接父分类的ID"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  time.Time createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  time.Time updatedAt = 27 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 22 [(go.field) = {tags:'gorm:"type:timestamptz(6);index"'}];
}

message AttrAttrGroup{
  uint64 attrId = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 groupId = 2 [(go.field) = {tags:'gorm:"primaryKey"'}];
  time.Time createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  deletedAt.DeletedAt deletedAt = 26 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}


// 这种方式占空间，每条都要额外记录type，不如拆表moment_tag,moment_area
message ContentAttr{
  uint64 refId = 6 [(go.field) = {tags:'gorm:"size:20;not null;index:idx_content" validate:"required" comment:"content id"'}];
  uint64 attrId = 3 [(go.field) = {tags:'gorm:"size:20;not null;index:idx_attr" validate:"required" comment:"attr id"'}];
  string value = 4[(go.field) = {tags:'gorm:"type:text" validate:"required" comment:"属性值"'}];
  uint64 userId = 9 [(go.field) = {tags:'gorm:"size:20" comment:"用户id"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  time.Time createdAt = 16 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  time.Time updatedAt = 27 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 22 [(go.field) = {tags:'gorm:"type:timestamptz(6);index"'}];
}

// Deprecated 类型拆分
message Content{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  ContentType type = 23[(go.field) = {tags:'gorm:"type:int2;index" comment:"类型"'}];
  string title = 24 [(go.field) = {tags:'gorm:"size:50;not null" comment:"标题"'}];
  string intro = 25 [(go.field) = {tags:'gorm:"size:100;not null" comment:"介绍"'}];
  string abstract = 26 [(go.field) = {tags:'gorm:"size:100;not null" comment:"摘要"'}];
  string content = 2 [(go.field) = {tags:'gorm:"text;not null" comment:"内容"'}];
  common.DocType docType = 28 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"文档类型"'}];
  repeated string images = 32 [(go.field) = {tags:'gorm:"type:text" comment:"图片"'}];
  uint64 containerId = 4 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"集合Id"'}];
  Container container = 5 [(go.field) = {tags:'gorm:"-" comment:"集合"'}];
  common.Tag mood = 9 [(go.field) = {tags:'gorm:"-" comment:"心情"'}];
  common.Tag weather = 21 [(go.field) = {tags:'gorm:"-" comment:"天气"'}];
  common.Area area = 19 [(go.field) = {tags:'gorm:"-" comment:"地区"'}];
  uint64 areaId = 20 [(go.field) = {tags:'gorm:"size:10;not null" comment:"地区"'}];
  string location = 14 [(go.field) = {tags:'gorm:"size:20;not null" comment:"位置"'}];
  repeated common.Tag tags = 6 [(go.field) = {tags:'gorm:"many2many:content_tag;ForeignKey:type,id;joinForeignKey:type,RefId;joinReferences:TagId" comment:"标签"'}];
  repeated common.Attribute attrs = 7 [(go.field) = {tags:'gorm:"many2many:content_attr;ForeignKey:type,id;joinForeignKey:RefId;joinReferences:TagId" comment:"标签"'}];
  user.UserBase user = 8 [(go.field) = {tags:'gorm:"-" comment:"用户"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" comment:"用户id"'}];
  uint32 sequence = 12 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"同级别的分类可根据sequence的值来排序，置顶"'}];
  uint32 anonymous = 15 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"是否匿名,0-是,1否"'}];
  ViewPermission permission = 13 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"查看权限"'}];
  uint32 status = 18 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  time.Time createdAt = 16 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  time.Time updatedAt = 27 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 22 [(go.field) = {tags:'gorm:"type:timestamptz(6);index"'}];
}


// Deprecated 类型拆分
message Container{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  ContainerType type = 5 [(go.field) = {tags:'gorm:"type:int2;index" comment:"类型"'}];
  string title = 2 [(go.field) = {tags:'gorm:"size:50;not null" comment:"标题"'}];
  string desc = 3 [(go.field) = {tags:'gorm:"type:text;not null" comment:"描述"'}];
  string cover = 4 [(go.field) = {tags:'gorm:"size:255;not null" comment:"封面"'}];
  uint32 sequence = 12 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"同级别的分类可根据sequence的值来排序，置顶"'}];
  uint32 anonymous = 15 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"是否匿名,0-是,1否"'}];
  ViewPermission permission = 13 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"查看权限"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" comment:"用户id"'}];
  uint32 status = 18 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  time.Time createdAt = 16 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  time.Time updatedAt = 27 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 22 [(go.field) = {tags:'gorm:"type:timestamptz(6);index"'}];
}

message Favorite{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  user.UserBase user = 2 [(go.field) = {tags:'gorm:"-" comment:"用户"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" comment:"用户id"'}];
  string title = 3 [(go.field) = {tags:'gorm:"size:10;not null" comment:"标题"'}];
  string desc = 5 [(go.field) = {tags:'gorm:"type:text;not null" comment:"描述"'}];
  string cover = 4 [(go.field) = {tags:'gorm:"size:255;not null" comment:"封面"'}];
  uint32 sequence = 12 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"同级别的分类可根据sequence的值来排序，置顶"'}];
  uint32 anonymous = 15 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"是否匿名,0-是,1否"'}];
  repeated  user.UserBase followUsers = 7 [(go.field) = {tags:'gorm:"-" comment:"关注人"'}];
  time.Time createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  time.Time updatedAt = 27 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
  deletedAt.DeletedAt deletedAt = 26 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}

message FavFollow{
  uint64 favId = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"primaryKey"  comment:"用户id"'}];
  time.Time createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  deletedAt.DeletedAt deletedAt = 26 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}

message UserStatistics{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint32 diary = 2 [(go.field) = {tags:'gorm:"type:int8'}];
  uint32 moment = 3 [(go.field) = {tags:'gorm:"type:int8"'}];
  uint32 article = 4 [(go.field) = {tags:'gorm:"type:int8"'}];
  uint32 note = 5 [(go.field) = {tags:'gorm:"type:int8"'}];
  uint32 favorite = 6 [(go.field) = {tags:'gorm:"type:int8"'}];
  uint32 diaryBook = 7 [(go.field) = {tags:'gorm:"type:int8"'}];
  uint32 comment = 8 [(go.field) = {tags:'gorm:"type:int8"'}];
  uint32 like = 9 [(go.field) = {tags:'gorm:"type:int8"'}];
  uint32 collect = 10 [(go.field) = {tags:'gorm:"type:int8"'}];
  time.Time createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  time.Time updatedAt = 27 [(go.field) = {tags:'gorm:"type:timestamptz(6)"'}];
}